# mbd

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  README.rst
.github/workflows/: cmake-multi-platform.yml
examples/math/: CMakeLists.txt
examples/math/header/: gain.hpp  math_lib.hpp  mathop.hpp  sink.hpp  source.hpp  type_convertor.hpp  unit_delay.hpp
examples/math/src/: main.cpp
js_view_adapter/: CMakeLists.txt
js_view_adapter/header/: js_view_adapter.hpp  json_serializer.hpp
js_view_adapter/src/: js_view_adapter.cpp  json_serializer.cpp  main.cpp
lib/controller/: CMakeLists.txt
lib/controller/header/: controller.hpp  dfs.hpp  graph.hpp  iview_adapter.hpp  library.hpp
lib/controller/src/: controller.cpp  dfs.cpp  graph.cpp  library.cpp
lib/controller/test/: CMakeLists.txt  controller_helper.cpp  controller_helper.hpp  controller_helper_gtest.cpp  t_controller.cpp  t_library.cpp  t_performance.cpp
lib/controller/test/library_fixtures/: gain.hpp  math_lib.hpp  mathop.hpp  sink.hpp  source.hpp  type_convertor.hpp  unit_delay.hpp
lib/model/: CMakeLists.txt
lib/model/header/: component.hpp  connection.hpp  connection_state.hpp  data_holder.hpp  data_type.hpp  enum_hash.hpp  log_level.hpp  model.hpp  msg_dispatcher.hpp  node.hpp  param.hpp  port.hpp  uuid.hpp
lib/model/src/: component.cpp  connection.cpp  data_holder.cpp  model.cpp  msg_dispatcher.cpp  node.cpp  param.cpp  port.cpp  uuid.cpp
lib/model/test/: CMakeLists.txt  t_connection.cpp  t_model.cpp  t_node.cpp
